--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <h3 class="experience-designation  m0 m-blue">High School</h3>
                         <h4 class="experience-company-name ">Delhi Public School, Lucknow</h4>
                         <h5 class="experience-duration m0"> 2015</h5>
-                         <h4 class="experience-company-name "> Cgpa- 9.8%</h4>
+                         <h4 class="experience-company-name "> Cgpa- 9.8</h4>
 
                         <p class="experience-description text-align-justify"></p>
                     </div>
